# pytest-brightest

./: AGENTS.md  ARGUMENTS.md  GEMINI.md  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: plan.md
src/pytest_brightest/: __init__.py  constants.py  plugin.py  reorder.py  shuffler.py
tests/: conftest.py  test_plugin.py  test_reorder.py  test_shuffler.py
