[project]
name = "pytest-brightest"
version = "0.1.0"
description = "Bright ideas for improving your pytest experience"
readme = "README.md"
authors = [
    { name = "Gregory M. Kapfhammer", email = "gkapfham@allegheny.edu" }
]
requires-python = ">=3.11"
keywords = [
  "pytest", "testing", "llm"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.scripts]
pytest-brightest = "pytest_brightest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
