[project]
name = "pytest-brightest"
version = "0.1.0"
description = "Bright ideas for improving your pytest experience"
readme = "README.md"
authors = [
    { name = "Gregory M. Kapfhammer", email = "gkapfham@allegheny.edu" }
]
requires-python = ">=3.11"
keywords = [
  "pytest", "testing", "llm"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=8.4.1",
    "pytest-json-report>=1.5.0",
    "rich>=14.0.0",
]

[project.entry-points.pytest11]
brightest = "pytest_brightest.plugin"

[project.scripts]
pytest-brightest = "pytest_brightest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
    "symbex>=2.0",
    "taskipy>=1.14.1",
    "ty>=0.0.1a12",
    "pytest-mock>=3.12.0",
]

[tool.ruff]
line-length = 79
lint.ignore = [
    "D203", # do not check blank lines
    "D213", # do not check multi-line docstrings
    "E501", # do not check line length
]
lint.select = [
    "E",    # pycodestyle
    "D",    # pydocstyle
    "I",    # isort
    "F",    # pyflakes
    "PL",   # pylint
    "Q",    # flake8-quotes
    "RUF",  # ruff-specific
    "W",    # pycodestyle warnings
    "T201"  # flake8-print
]

[tool.isort]
include_trailing_comma = true
force_single_line = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
